# project-krishimitra

./: .env.example  GETTING_STARTED.md  INTEGRATION_STATUS.md  README.md  RESTART_INSTRUCTIONS.md  SETUP_GUIDE.md  UI_QUICK_START.md  UI_SUMMARY.md  WHATSAPP_INTEGRATION_SUMMARY.md  WINDOWS_SETUP_AND_RUN_GUIDE.md  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt  start-krishimitra.bat  start-krishimitra.ps1  test_iot_simple.py  test_registration.py  test_weather_satellite.py
.hypothesis/constants/: 000d22fd5a2545ce  000d909213ff3307  0036c3f9aeac6cb9  004e722d2b39195a  005be612047aa41d  006b559781a41f7f  006f4efa86ea32c1  009f0116eab76fe1  00af7731471577ae  00af9c4b119a3a6e  016ea8820db8010c  01831d6f995783ed  018739f7205fed82  0189af9862b72772  019447e2392a7cc8  01bab8b6846a7aee  01c02a57c2dc37f0  0201244ade5b05dd  020bd4b9cc3144b7  02168137d6ea8393  0221ac1d32810d42  0227b9f1fb7e9007  024486de03e8cc4d  024989ab99e08696  025c876b6e0ab5a5  026551f7ae48804c  0271040f06cbf97e  028ab1f0712454ba  0296c617e091ab2e  02aa8a0079b29a8e  02c9a85645440086  02fdcd7d009a4838  02fef9ef34523d7e  031f85f1c11bb00b  03905f7aa7a42f3a  03a0bc33c3be41ac  03ab1e6e6bb21915  03b0d3ea0ec5c40c  03d65cf548ce3b23  03ed2b59f1db2823  (+2734 more)
.hypothesis/examples/02943862c51236d1/: 7e93452fa01c9300
.hypothesis/examples/04e6b3400353b141/: 02943862c51236d1  0aff08e328556d62  0c619cfc2fcaf89b  0d8a3c3af35b4eb5  1f711aafae390b4a  264cb06aef121ced  289113d5dbbff2b1  303d3f8385d0c808  362f5cc63c6c786f  428821fddc3f09ae  495f964d40cb6f9a  4ca71bca2c02117d  5025cf2750347b7e  5984987b75a4188a  5a2dd2ebce311c09  5aa6f5a227ec1f5c  5ca9a1d61ba3fd45  5cabc84aab0093ae  6d55914e1db9efaf  70f43f38e45f9120  770e9587b7cdb945  7ab2ddaad307b125  8202ec559e7fbcbe  86f1a8751758a529  8b51497851f2f0e8  8def39da8be1c1d5  a4a5c8872790b721  a5863e67a1604366  a973d9303c5e3552  b090cf01750af4d2  (+16 more)
.hypothesis/tmp/: tmp2g24hwm3  tmp65k07svk  tmpfj1j4sxo  tmpls332ano  tmpmdhofxpw  tmpmgy8fo4q  tmpmiepnfha  tmpnbt_x_a0  tmpr1ggbaow  tmpr9vl1jod  tmptu_zfvqi  tmpuphfoldu  tmpvr2adw4h  tmpvwe_9i4n  tmpw48g6daa  tmpzau8n8st
infrastructure/: REGIONAL_DEPLOYMENT.md  app.py  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  krishimitra_stack.py  regional_deployment_stack.py
scripts/: deploy.py
src/krishimitra/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_advisory_agent.py  test_aws_mocking.py  test_bandwidth_optimization.py  test_feedback_agent.py  test_infrastructure_config.py  test_iot_data_collection.py  test_knowledge_reasoning.py  test_main.py  test_market_government_integration.py  test_monitoring_dashboard.py  test_regional_deployment.py  test_resource_optimization.py  test_security_privacy.py  test_sustainability_agent.py  test_voice_processing.py
tests/api/: test_farmers.py
tests/integration/: __init__.py  test_end_to_end_workflows.py
tests/property/: test_data_ingestion_properties.py  test_farmer_models_only.py  test_farmer_profile_properties.py  test_farmer_profile_simple.py  test_farmer_properties_standalone.py  test_government_ngo_integration_properties.py  test_government_ngo_simple.py  test_knowledge_reasoning_properties.py  test_security_properties.py
tests/utils/: __init__.py  aws_mocks.py
ui/: FEATURES.md  README.md  app.js  index.html  styles.css
(+318 files in other folders)
